# AI_5-B3-Song-Backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
articles/: admin.py  models.py  openai_utility.py  serializers.py  urls.py  views.py
articles/migrations/: 0001_initial.py
config/: settings.py  urls.py
medias/: admin.py  models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_userphoto.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_avatar.py
